<resources>
    <string name="app_name">智能设备管理系统</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="thok_prompt_user_name">账户</string>
    <string name="thok_prompt_password">密码</string>
    <string name="thok_action_sign_in">登陆</string>
    <string name="thok_menu_title_my">我的</string>
    <string name="thok_error_illegal_character">非法字符</string>
    <string name="thok_error_invalid_password">密码太短</string>
    <string name="thok_error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_explain">忘记密码，请联系管理员</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">首页</string>
    <string name="title_information">设备信息</string>
    <string name="title_receiving_materials">领料申请</string>
    <string name="home_title">首页</string>
    <string name="equipment">设备</string>
    <string name="search_button_text">搜索</string>
    <string name="thok_my">我的</string>
    <string name="thok_logout">退出</string>
    <string name="thok_userInfo_text">个人信息</string>
    <string name="thok_account_text">账号:</string>
    <string name="thok_username_text">姓名:</string>
    <string name="thok_role_text">角色:</string>
    <string name="thok_create_time">创建时间:</string>
    <string name="thok_alter_password">修改密码</string>
    <string name="thok_old_pass">旧密码</string>
    <string name="thok_new_pass">新密码</string>
    <string name="confirm_the_new_password_again">再次确认新密码</string>
    <string name="thok_alter">修改</string>
    <string name="thok_equipment_repair_request">设备报修</string>
    <string name="thok_patrol">设备巡检</string>
    <string name="thok_repair_task">维修任务</string>
    <string name="thok_maintain_task">保养任务</string>
    <string name="thok_maintain_start">保养实施</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thok_equipment_select">设备选择</string>
    <string name="thok_malfunction_cause">故障原因</string>
    <string name="thok_repair_detail">报修内容</string>
    <string name="thok_equipment_position">设备位置</string>
    <string name="thok_equipment_model">设备型号</string>
    <string name="thok_equipment_name">设备名称</string>
    <string name="thok_equipment_no">设备编号</string>
    <string name="thok_rpair_report">维修上报</string>
    <string name="thok_equipment_rpair">设备维修</string>
    <string name="submit">提交</string>
    <string name="thok_inquiry">查询</string>
    <string name="thok_repair_order">报修单号</string>
    <string name="thok_repair_cause">报修原因</string>
    <string name="thok_apply">申请</string>
    <string name="thok_goods_info">领料单详情</string>
    <string name="thok_goods_detailed">领料明细</string>
    <string name="thok_add_goods">添加设备</string>
</resources>
