<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.MyActivity"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/bar_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thok_my"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/thok_userInfo_text"
        />
    <TextView
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/user_account_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:background="@drawable/bottom_line_shape"
        android:text="@string/thok_account_text"
        />

    <TextView
        android:gravity="center_vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:id="@+id/user_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:text="@string/thok_username_text"
        android:background="@drawable/bottom_line_shape"/>
    <TextView
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/role_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:text="@string/thok_role_text"
        android:background="@drawable/bottom_line_shape"/>
    <TextView
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/create_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:text="@string/thok_create_time"
        android:background="@drawable/bottom_line_shape"/>
    <LinearLayout
      android:layout_weight="2"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />
    <LinearLayout
        android:id="@+id/alter_password"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:background="@drawable/bottom_line_shape">
        <TextView
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/thok_alter_password"
            />
        <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_action_gono" />
    </LinearLayout>



    <LinearLayout
        android:gravity="center"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center"
            android:id="@+id/logout_button"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:text="@string/thok_logout"
            />
    </LinearLayout>
</LinearLayout>