<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragmentviewmodel.HomePageFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/bar_color"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/home_title"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title"/>
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/repair_request"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/patrol"
            app:layout_constraintTop_toBottomOf="@id/toolbar2"
            app:layout_constraintBottom_toTopOf="@id/repair_task">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />
            <TextView
                android:text="@string/thok_equipment_repair_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/patrol"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/repair_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar2"
            app:layout_constraintBottom_toTopOf="@id/maintain">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />
            <TextView
                android:text="@string/thok_patrol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/repair_task"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/maintain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repair_request"
            app:layout_constraintBottom_toBottomOf="@id/receiving_materials">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />
            <TextView
                android:text="@string/thok_repair_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/maintain"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/repair_task"
            app:layout_constraintTop_toBottomOf="@id/patrol"
            app:layout_constraintBottom_toBottomOf="@id/blank">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />
            <TextView
                android:text="@string/thok_maintain_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/receiving_materials"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/blank"
            app:layout_constraintTop_toBottomOf="@id/repair_task"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />
            <TextView
                android:text="@string/title_receiving_materials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:visibility="invisible"
            android:id="@+id/blank"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/receiving_materials"
            app:layout_constraintTop_toBottomOf="@id/maintain"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />
            <TextView
                android:text="@string/title_receiving_materials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>