<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout

            android:layout_weight="1"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/text_input_layout1"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/app_name"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout1"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintBottom_toTopOf="@+id/text_input_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <AutoCompleteTextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/thok_prompt_user_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout2"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout1"
                app:layout_constraintBottom_toTopOf="@+id/forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    app:layout_constraintBaseline_toBaselineOf="@+id/user_name"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/thok_prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/thok_action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/forget"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="15dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"/>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bt_shape"
                android:text="@string/thok_action_sign_in"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>