<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragmentviewmodel.MyFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/bar_color"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thok_my"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text_color_white"
                android:layout_gravity="center"/>
        </android.support.v7.widget.Toolbar>
        <TextView
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/text_color_black"
            android:textSize="17sp"
            android:text="@string/thok_userInfo_text"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/white"
            >
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:text="@string/thok_account_text"
                />
            <TextView
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:id="@+id/user_account_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:background="@drawable/bottom_line_shape"
                android:text="kkx@kinoha.com"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/white"
            >
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:text="@string/thok_username_text"
                />
            <TextView
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:id="@+id/user_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:background="@drawable/bottom_line_shape"
                android:text="旗木卡卡西"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/white"
            >
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:text="@string/thok_role_text"
                />
            <TextView
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:id="@+id/role_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:background="@drawable/bottom_line_shape"
                android:text="火影"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/white"
            >
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:text="@string/thok_create_time"
                />
            <TextView
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:id="@+id/create_time_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:background="@drawable/bottom_line_shape"
                android:text="2013-12-14 15:45:00"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alter_password"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white">
            <TextView
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:text="@string/thok_alter_password" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_action_gono" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_gravity="center"
                android:id="@+id/logout_button"
                android:background="@drawable/bt_bg"
                android:textColor="@color/text_color_white"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:text="@string/thok_logout"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>